[tool.poetry]
name = "keystone-docs"
version = "0.1.0"
description = ""
authors = ["Yuval Herziger <yherziger@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
